# learning_cl

./: CMakeLists.txt  README.md  matvec.c
kernels/: matvec.cl
src/1_getting_started/1_hello_matvec/: hello_matvec.cpp
